fix: добавлен z-index блоку social

--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   min-width: 400px;
+  z-index: 100;
 }
 
 .social-block {
